<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/default_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.shellcore.android.observerpattern.MainActivity">

    <Button
        android:id="@+id/btn_save"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_update"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/btn_update"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_text"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/btn_text"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_image"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/btn_image"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_list"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/btn_list"
        android:textColor="@color/colorAccent" />

</LinearLayout>
